--- a/explore sac.ipynb
+++ b/explore sac.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "41a0c8a0",
    "metadata": {},
    "outputs": [],
@@ -13,12 +13,13 @@
     "# PyTorch\n",
     "import torch\n",
     "import os\n",
-    "# from collections import deque\n",
     "import numpy as np\n",
+    "import tqdm\n",
     "from stable_baselines3 import SAC\n",
     "# from stable_baselines3.common.noise import NormalActionNoise\n",
     "from stable_baselines3.common.vec_env import DummyVecEnv\n",
-    "from stable_baselines3.common.callbacks import EvalCallback"
+    "from stable_baselines3.common.callbacks import EvalCallback\n",
+    "from stable_baselines3.common.buffers import ReplayBuffer"
    ]
   },
   {
@@ -55,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 64,
    "id": "7cb8feb5",
    "metadata": {},
    "outputs": [],
@@ -73,7 +74,7 @@
     "    achieved = observation['achieved_goal'][task][0:4]\n",
     "    desired = observation['desired_goal'][task][0:4]\n",
     "    res = 1.0 - np.linalg.norm(achieved - desired)\n",
-    "    assert res <= 1.0 and res >= 0.0, \"Reward out of range!\"\n",
+    "    # assert res <= 1.0 and res >= 0.0, \"Reward out of range! \"+str(res)\n",
     "    return res   "
    ]
   },
@@ -111,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "id": "93560185",
    "metadata": {},
    "outputs": [],
@@ -121,29 +122,69 @@
     "    env = FlattenDictWrapper(env)\n",
     "    return env\n",
     "\n",
-    "n_training_envs = 16\n",
+    "n_training_envs = 1\n",
     "env = DummyVecEnv([make_env]*n_training_envs)\n",
     "eval_env = DummyVecEnv([make_env])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7db8869f",
+   "execution_count": 73,
+   "id": "41180dde",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = SAC(\"MlpPolicy\", env, device=device, buffer_size=5000000, learning_rate=0.001)\n"
+    "combos1 = torch.load(\"combos/combos-lr001-hs0-just-success-10000\")\n",
+    "combos2 = torch.load(\"combos/combos-lr001-hs0-just-success-10000-5000\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
+   "id": "58ab55b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def initialize_buffer(replay_buffer, combos):\n",
+    "    for combo in tqdm.tqdm(combos):\n",
+    "        state = eval_env.reset()\n",
+    "        for combo_step in combo:\n",
+    "            action = np.asarray([combo_step])\n",
+    "            obs, reward, done, info = eval_env.step(action)\n",
+    "            replay_buffer.add(state[0], obs[0], action, reward, done, info)\n",
+    "            state = obs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "7db8869f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1209/1209 [23:39<00:00,  1.17s/it]\n",
+      "100%|██████████| 636/636 [12:38<00:00,  1.19s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = SAC(\"MlpPolicy\", env, device=device, learning_rate=0.001)\n",
+    "replay_buffer = model.replay_buffer\n",
+    "initialize_buffer(replay_buffer, combos1)\n",
+    "initialize_buffer(replay_buffer, combos2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "id": "17501d87",
    "metadata": {},
    "outputs": [],
    "source": [
-    "max_timesteps = 250000\n",
+    "max_timesteps = 50000\n",
     "run_name = f\"sac_{max_timesteps}_reward_shaping_\"+task\n",
     "eval_log_dir = os.path.join(\"eval_logs\", run_name)\n",
     "eval_callback = EvalCallback(eval_env, best_model_save_path=eval_log_dir,\n",
@@ -170,219 +211,63 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Eval num_timesteps=496, episode_reward=166.28 +/- 0.00\n",
+      "Eval num_timesteps=500, episode_reward=167.52 +/- 0.00\n",
       "Episode length: 280.00 +/- 0.00\n",
       "New best mean reward!\n",
-      "Eval num_timesteps=992, episode_reward=166.28 +/- 0.00\n",
+      "Eval num_timesteps=1000, episode_reward=167.52 +/- 0.00\n",
       "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=1488, episode_reward=166.28 +/- 0.00\n",
+      "Eval num_timesteps=1500, episode_reward=167.52 +/- 0.00\n",
       "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=1984, episode_reward=166.28 +/- 0.00\n",
+      "Eval num_timesteps=2000, episode_reward=167.52 +/- 0.00\n",
       "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=2480, episode_reward=166.28 +/- 0.00\n",
+      "Eval num_timesteps=2500, episode_reward=167.52 +/- 0.00\n",
       "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=2976, episode_reward=166.28 +/- 0.00\n",
+      "Eval num_timesteps=3000, episode_reward=167.52 +/- 0.00\n",
       "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=3472, episode_reward=166.28 +/- 0.00\n",
+      "Eval num_timesteps=3500, episode_reward=167.52 +/- 0.00\n",
       "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=3968, episode_reward=166.28 +/- 0.00\n",
+      "Eval num_timesteps=4000, episode_reward=167.52 +/- 0.00\n",
       "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=4464, episode_reward=166.28 +/- 0.00\n",
+      "Eval num_timesteps=4500, episode_reward=167.52 +/- 0.00\n",
       "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=4960, episode_reward=166.28 +/- 0.00\n",
+      "Eval num_timesteps=5000, episode_reward=167.52 +/- 0.00\n",
       "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=5456, episode_reward=166.28 +/- 0.00\n",
+      "Eval num_timesteps=5500, episode_reward=47.77 +/- 12.32\n",
       "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=5952, episode_reward=166.28 +/- 0.00\n",
+      "Eval num_timesteps=6000, episode_reward=167.52 +/- 0.00\n",
       "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=6448, episode_reward=166.28 +/- 0.00\n",
+      "Eval num_timesteps=6500, episode_reward=167.52 +/- 0.00\n",
       "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=6944, episode_reward=166.28 +/- 0.00\n",
+      "Eval num_timesteps=7000, episode_reward=167.52 +/- 0.00\n",
       "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=7440, episode_reward=166.28 +/- 0.00\n",
+      "Eval num_timesteps=7500, episode_reward=167.52 +/- 0.00\n",
       "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=7936, episode_reward=166.28 +/- 0.00\n",
+      "Eval num_timesteps=8000, episode_reward=167.52 +/- 0.00\n",
       "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=8432, episode_reward=166.28 +/- 0.00\n",
+      "Eval num_timesteps=8500, episode_reward=167.52 +/- 0.00\n",
       "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=8928, episode_reward=166.28 +/- 0.00\n",
+      "Eval num_timesteps=9000, episode_reward=167.52 +/- 0.00\n",
       "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=9424, episode_reward=166.28 +/- 0.00\n",
+      "Eval num_timesteps=9500, episode_reward=140.14 +/- 28.62\n",
       "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=9920, episode_reward=166.28 +/- 0.00\n",
+      "Eval num_timesteps=10000, episode_reward=56.52 +/- 37.65\n",
       "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=10416, episode_reward=166.28 +/- 0.00\n",
+      "Eval num_timesteps=10500, episode_reward=167.52 +/- 0.00\n",
       "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=10912, episode_reward=166.28 +/- 0.00\n",
+      "Eval num_timesteps=11000, episode_reward=149.84 +/- 0.18\n",
       "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=11408, episode_reward=166.28 +/- 0.00\n",
+      "Eval num_timesteps=11500, episode_reward=167.52 +/- 0.00\n",
       "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=11904, episode_reward=166.28 +/- 0.00\n",
+      "Eval num_timesteps=12000, episode_reward=167.52 +/- 0.00\n",
       "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=12400, episode_reward=166.28 +/- 0.00\n",
+      "Eval num_timesteps=12500, episode_reward=167.52 +/- 0.00\n",
       "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=12896, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=13392, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=13888, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=14384, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=14880, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=15376, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=15872, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=16368, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=16864, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=17360, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=17856, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=18352, episode_reward=176.05 +/- 0.15\n",
+      "Eval num_timesteps=13000, episode_reward=167.67 +/- 0.10\n",
       "Episode length: 280.00 +/- 0.00\n",
       "New best mean reward!\n",
-      "Eval num_timesteps=18848, episode_reward=170.05 +/- 0.32\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=19344, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=19840, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=20336, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=20832, episode_reward=166.65 +/- 0.06\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=21328, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=21824, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=22320, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=22816, episode_reward=172.80 +/- 1.09\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=23312, episode_reward=172.36 +/- 0.25\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=23808, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=24304, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=24800, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=25296, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=25792, episode_reward=166.87 +/- 0.31\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=26288, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=26784, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=27280, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=27776, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=28272, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=28768, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=29264, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=29760, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=30256, episode_reward=170.55 +/- 0.07\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=30752, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=31248, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=31744, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=32240, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=32736, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=33232, episode_reward=168.53 +/- 0.04\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=33728, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=34224, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=34720, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=35216, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=35712, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=36208, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=36704, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=37200, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=37696, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=38192, episode_reward=166.67 +/- 0.11\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=38688, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=39184, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=39680, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=40176, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=40672, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=41168, episode_reward=169.12 +/- 0.17\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=41664, episode_reward=169.21 +/- 0.25\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=42160, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=42656, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=43152, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=43648, episode_reward=169.07 +/- 0.17\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=44144, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=44640, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=45136, episode_reward=166.33 +/- 0.09\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=45632, episode_reward=173.54 +/- 0.11\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=46128, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=46624, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=47120, episode_reward=172.59 +/- 0.22\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=47616, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=48112, episode_reward=171.81 +/- 0.13\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=48608, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=49104, episode_reward=166.28 +/- 0.00\n",
-      "Episode length: 280.00 +/- 0.00\n",
-      "Eval num_timesteps=49600, episode_reward=166.28 +/- 0.00\n",
+      "Eval num_timesteps=13500, episode_reward=167.52 +/- 0.00\n",
       "Episode length: 280.00 +/- 0.00\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<stable_baselines3.sac.sac.SAC at 0x7fe5adb67a90>"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -456,12 +341,6 @@
     "print(\"Action space:\", env_eval.action_space)\n",
     "print(\"Model action space:\", model.action_space)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c73d0edd",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
